[gd_scene load_steps=7 format=3 uid="uid://0ykyiawmntci"]

[ext_resource type="Script" uid="uid://0kw8m7pnquo2" path="res://GUI Scripts/space_ship_game_over.gd" id="1_atxdk"]
[ext_resource type="FontFile" uid="uid://e2r65gh5axk0" path="res://Assets/Fonts/PixelifySans.ttf" id="2_vmrel"]
[ext_resource type="AudioStream" uid="uid://dse6av8yddelc" path="res://Assets/Audio & Sound Effects/Enter Sound Effect.mp3" id="3_px2ph"]
[ext_resource type="AudioStream" uid="uid://y82t3c6u0wrh" path="res://Assets/Audio & Sound Effects/Click sound.mp3" id="4_8wubf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_px2ph"]
bg_color = Color(0.247059, 0.156863, 0.196078, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_px2ph"]

[node name="SpaceShipGameOver" type="Control"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -300.0
offset_right = 225.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_atxdk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.5
offset_top = -131.5
offset_right = 163.5
offset_bottom = 131.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_px2ph")

[node name="Game Over" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -101.0
offset_top = 17.5
offset_right = 102.0
offset_bottom = 66.5
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_vmrel")
theme_override_font_sizes/font_size = 50
text = "GAME OVER"
horizontal_alignment = 1

[node name="GoldEarnedLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 0.5
offset_top = 87.5
offset_right = 0.5
offset_bottom = 124.5
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_vmrel")
theme_override_font_sizes/font_size = 30
text = "GOLD EARNED : "
horizontal_alignment = 1

[node name="Restart" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = 3.0
offset_right = 86.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_vmrel")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_px2ph")
text = "RESTART"

[node name="Quit" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = 65.0
offset_right = 86.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_vmrel")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_px2ph")
text = "QUIT"

[node name="Sound Effects" type="Node" parent="."]

[node name="Enter Sound Effect" type="AudioStreamPlayer2D" parent="Sound Effects"]
visible = false
position = Vector2(-98, 285)
stream = ExtResource("3_px2ph")
volume_db = 5.0
max_distance = 10000.0
bus = &"SFX"

[node name="Hovering Sound Effect" type="AudioStreamPlayer2D" parent="Sound Effects"]
visible = false
position = Vector2(-74, 218)
stream = ExtResource("4_8wubf")
max_distance = 100000.0
bus = &"SFX"

[connection signal="mouse_entered" from="Panel/Restart" to="." method="_on_restart_mouse_entered"]
[connection signal="mouse_entered" from="Panel/Quit" to="." method="_on_quit_mouse_entered"]
